# research_01

./: README.md  config.yaml  main.py  pyproject.toml  tinyimagenet_training_results.csv
config/: config.py
data/: tiny_imagenet_dataset.py  tiny_imagenet_factory.py
experiments/: experiment.py  experiment_builder.py
factories/: model_factory.py
models/: base_model.py  cnn_model.py  mlp_model.py
optimizers/: sophie.py
strategies/: activation_strategy.py  optimizer_strategy.py
training/: trainer.py
